--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <button type="submit">Ekle</button>
             </form>
         </div>
-        <p>Görevler</p>
+        <p class="dutyText">Görevler</p>
         
             <a id="btnDeleteAll" href="#" class="deleteAll">Hepsini Sil</a>
         
