--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div>
             <form d="AddTaskForm">
                 <input type="text" name="" id="txtTaskName" placeholder="Yeni Görev Giriniz">
-                <button type="submit">Ekle</button>
+                <button type="submit">+</button>
             </form>
         </div>
         <p class="dutyText">Görevler</p>
